Adicionando componente Texto

--- a/luz_e_cena/src/componentes/Newsletter/Newsletter.module.css
+++ b/luz_e_cena/src/componentes/Newsletter/Newsletter.module.css
@@ -3,7 +3,7 @@
     padding: var(--padding-xxl) 0;
 }
 
-.newsletter h2{
+.titulo{
     color: var(--cor-texto);
     font-family: var(--fonte-titulo);
     font-size: var(--font-size-l);
