Adicionando componente das Tags de categoria e de censura

--- a/luz_e_cena/src/index.css
+++ b/luz_e_cena/src/index.css
@@ -6,8 +6,8 @@
   --cor-faixa-etaria: #F5D010;
   --cor-faixa-etaria-livre: #C3FF95;
 
-  --cor-de-fundo-faixa-etaria: #EFEFEF;
-  --cor-de-fundo-input: #EFEFEF;
+  --cor-de-fundo-categoria-2d: #EFEFEF;
+  --cor-de-fundo-categoria-3d: #A6A6A6;
   --cor-de-fundo: #ffffff;
   --cor-de-fundo-newsletter: #CCDBFF;
   --cor-de-fundo-footer: #1E1E1E;
