--- a/luz_e_cena/src/componentes/Cabecalho/Cabecalho.module.css
+++ b/luz_e_cena/src/componentes/Cabecalho/Cabecalho.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     gap: var(--gap-xl);
-    background-color: var(--cor-de-fundo);
+    background-color: var(--branco);
     padding: var(--padding-s) 0;
 
 }
@@ -19,9 +19,9 @@
 
 a{
     text-decoration: none;
-    color: var(--cor-texto);
+    color: var(--preto);
 }
 
 a:hover{
-    color: var(--cor-texto-hover);
+    color: var(--cinza-escuro);
 }
