--- a/luz_e_cena/src/componentes/SelecionarCidade/SelecionarCidade.module.css
+++ b/luz_e_cena/src/componentes/SelecionarCidade/SelecionarCidade.module.css
@@ -20,7 +20,7 @@
     outline: none;
     cursor:pointer;
     font-family: var(--fonte-texto);
-    background-color: var(--cor-de-fundo-input);
-    color:var(--cor-texto);
+    background-color: var(--cinza-claro);
+    color:var(--preto);
   }
   
