--- a/luz_e_cena/src/componentes/TagCategoria/TagCategoria.module.css
+++ b/luz_e_cena/src/componentes/TagCategoria/TagCategoria.module.css
@@ -5,14 +5,13 @@
     font-weight: 400;
     text-align: center;
     font-family: var(--fonte-texto);
+    color:var(--preto);
 }
 
 .doisD {
-    background-color:var(--cor-de-fundo-categoria-2d);
-    color: var(--cor-texto);
+    background-color:var(--cinza-claro);
 }
 
 .tresD {
-    background-color: var(--cor-de-fundo-categoria-3d);
-    color:var(--cor-texto);
+    background-color: var(--cinza-medio);
 }
