--- a/luz_e_cena/src/index.css
+++ b/luz_e_cena/src/index.css
@@ -47,9 +47,22 @@
   --margin-xxl:6rem;
 }
 
-* {
+body {
+  width:100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 16px;
+
+  font-family: var(--fonte-texto);
+  font-size: var(--font-size-s);
+  font-weight: 400;
+}
+
+a{
+  text-decoration: none;
+  color:var(--preto);
+}
+
+a:hover{
+  transform: scale(1.1);
 }
